--- a/index.html
+++ b/index.html
@@ -28,32 +28,34 @@
     *{ box-sizing:border-box; }
     html,body{ height:100%; }
     body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background:
-        radial-gradient(1000px 700px at 20% 15%, rgba(255,255,255,.55), transparent 60%),
-        radial-gradient(900px 700px at 78% 18%, rgba(255,255,255,.35), transparent 62%),
-        linear-gradient(145deg, var(--bg1), var(--bg2));
-      overflow:hidden;
-      color: var(--ink);
-    }
+  margin:0;
+  font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  background:
+    radial-gradient(1000px 700px at 20% 15%, rgba(255,255,255,.55), transparent 60%),
+    radial-gradient(900px 700px at 78% 18%, rgba(255,255,255,.35), transparent 62%),
+    linear-gradient(145deg, var(--bg1), var(--bg2));
+  overflow-x: hidden;
+  overflow-y: auto;              /* ✅ permite scroll */
+  -webkit-overflow-scrolling: touch; /* ✅ scroll suave en iPhone */
+  color: var(--ink);
+}
 
     .frame{
-      position:relative;
-      width:min(980px, 96vw);
-      height:min(860px, 92vh);
-      margin:auto;
-      top:50%;
-      transform: translateY(-50%);
-      border-radius: 26px;
-      overflow:hidden;
-      box-shadow: var(--shadow);
-      background:
-        radial-gradient(1200px 900px at 10% 0%, rgba(255,255,255,.55), transparent 55%),
-        linear-gradient(160deg, rgba(255,255,255,.35), rgba(255,255,255,.20));
-      border: 1px solid rgba(255,255,255,.55);
-      isolation:isolate;
-    }
+  position:relative;
+  width:min(980px, 96vw);
+  min-height: min(860px, 92vh);
+  height: auto;                 /* ✅ deja crecer si el contenido es largo */
+  margin: 24px auto;            /* ✅ en vez de centrar con translate */
+  border-radius: 26px;
+  overflow:hidden;
+  box-shadow: var(--shadow);
+  background:
+    radial-gradient(1200px 900px at 10% 0%, rgba(255,255,255,.55), transparent 55%),
+    linear-gradient(160deg, rgba(255,255,255,.35), rgba(255,255,255,.20));
+  border: 1px solid rgba(255,255,255,.55);
+  isolation:isolate;
+}
+
 
     canvas{
       position:absolute;
